2008-05-08  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-type-font-keywords): Add leda and 0in
	as pragma keywords.
	(verilog-pretty-expr): Support lining up assignments which include
	part selects.
	(verilog-mode): More portable check for the availability of
	hideshow support.
	(verilog-do-indent): Remove special indent for declarations inside
	a parenthetical list.  The code is ill-advised, and doesn't work
	given the new user defined types.
	(verilog-set-auto-endcomments): Enhance function automatic
	endcomment to support functions that return user defined types.
	(verilog-mode): Add code to tell which-function-mode minor mode
	that Verilog supports this feature.

2008-05-08  Eli Zaretskii  <eliz@gnu.org>

	* epa-file.el: Require epa-hook.

	* loadup.el ("epa-hook"): Load epa-hook instead of epa-file-hook.

	* epa-hook.el: Renamed from epa-file-hook.el, to avoid
	file-names clashes on 8+3 filesystems.  Provide epa-hook.

	* org/org-jsinfo.el: Renamed from org-infojs.el, to avoid
	file-names clashes on 8+3 filesystems.

2008-05-08  Carsten Dominik  <dominik@science.uva.nl>

	* org/org.el (org-read-date-get-relative): Interpret lone
	weekday abbreviation as relative to today.

2008-05-08  Juanma Barranquero  <lekktu@gmail.com>

	* abbrev.el (define-abbrev-table):
	* composite.el (toggle-auto-composition):
	* json.el (json-alist-p, json-plist-p):
	* minibuffer.el (completion-table-with-predicate):
	* ps-mule.el (ps-mule-external-libraries):
	* emacs-lisp/advice.el (ad-special-form-p):
	* emacs-lisp/autoload.el (autoload-generate-file-autoloads):
	* eshell/em-smart.el (eshell-review-quick-commands):
	* progmodes/python.el (python-comment-line-p, python-blank-line-p)
	(python-skip-out, python-check-comint-prompt):
	Don't use `iff' in docstrings.

	* international/robin.el (robin-package-alist): Fix typo in docstring.
	(robin-current-package-name): Doc fix.
	(robin-activate): Don't use `iff' in docstring.
